# termux-ai-app

./: .gitignore  AUTOCAT_CONTEXT.md  AUTOCAT_KNOWLEDGE_BASE.md  BUILD_ASSESSMENT.md  BUILD_MEMORY.md  BUILD_OPTIONS.md  BUILD_VERIFICATION.md  CLAUDE.md  COMPILATION_STATUS.md  COMPILE_GUIDE.md  DEPLOYMENT_GUIDE.md  ENHANCEMENTS_SUMMARY.md  ENHANCEMENT_SUMMARY.md  FINAL_SUMMARY.md  INSTALL_NOW.md  MATERIAL_YOU_3_THEMING.md  PLACEHOLDER_CLASSES.md  PRE_PUSH_CHECKLIST.md  README.md  README_BUILD.md  TERMINAL_IMPLEMENTATION.md  android-sdk-setup.sh  build-apk.sh  build-direct.sh  build-in-proot.sh  build-instructions.md  build-offline.sh  build-with-gradle.sh  build.gradle  build.sh  fix-gradlew-v2.sh  fix-gradlew.sh  gradle.properties  gradlew  gradlew.bat  javac-errors-no-errors.txt  javac-errors.txt  settings.gradle  ubuntu-build.sh  validate_config.sh  (+3 more)
.devcontainer/: devcontainer.json  setup-android.sh
app/: build.gradle  proguard-rules.pro
docs/: Accessibility-Features.md  Architecture-Overview.md  Claude-Code-Setup.md  GitHub-Wiki-Setup-Notes.md  Home.md  Mobile-Gestures-Guide.md  README.md  UX-UI-Improvements.md  Wiki-Setup-Instructions.md
issues/: 001-complete-ui-polish-and-optimization.md  002-implement-voice-command-support.md  003-add-multi-language-support.md  004-create-plugin-system.md  005-implement-team-collaboration-features.md  006-implement-on-device-ai-models.md  007-enhance-context-management.md  008-implement-advanced-code-generation.md  009-add-offline-caching.md  (+22 more)
terminal-emulator/src/main/cpp/: CMakeLists.txt  pty_helper.cpp  termux_pty.cpp
(+142 files in other folders)
